src/assets/css/base.css
/* ... */
.button {

	background-color: var(--alt);
	color: white;
	box-shadow: inset -2px -2px hsl(0deg 0% 0% / 5%);

	text-decoration: none;
	border-radius: 2px;
	transition: box-shadow 0.1s ease-in;

	padding: 0.7rem 1.2rem;

	@media ( max-width: 1200px ) {
		padding: 0.5rem 1rem;
	}

	display: inline-flex;
	justify-content: center;
	align-items: center;
	gap: 0.5rem;

	text-transform: uppercase;
	font-weight: 500;
	letter-spacing: 0.5px;

	font-size: clamp(1rem,2vw,1.2rem);
	line-height: clamp(1rem,2vw,1.2rem);

	&:hover {
		box-shadow: inset -2px -2px hsl(0deg 0% 0% / 15%);
	}

	&.alt1 {
		background-color: var(--green);
		color: white;
	}

	&.big {
		padding: 1rem;
	}

	&.alt2 {
		background-color: var(--alt2);
	}

	svg {
		font-size: 1.4rem;
	}
}

.status {

	border: 1px solid var(--green);
	border-radius: 4rem;

	padding:
		calc(1rem/3)
		0.8rem
		calc(1rem/3)
		0.7rem;

	font-size: clamp(0.6rem,4vw,0.8rem);
	display: inline-block;
	color: var(--alt3);

	@media ( max-width: 1200px ) {
		/* margin-bottom: 1rem; */
	}

	span {

		display: inline-block;
		background-color: #00cd00;
		height: clamp(5px,3vw,9px);
		width: clamp(5px,3vw,9px);
		border-radius: 50%;
		margin-right: 0.5rem;

		animation: pulseGreen 1.2s ease-in-out infinite;
	}
}

.desktop {
	display: none;

	@media( min-width: 1200px ) {
		display: block;
	}
}

@keyframes scroll-testimonials {
	from {
		transform: translateX(10%);
	}
	to {
		transform: translateX(-50%);
	}
}

@keyframes pulseGreen {
	0% {
		box-shadow: 0 0 0 0 var(--green);
	}
	70% {
		box-shadow: 0 0 0 8px rgba(0, 255, 0, 0);
	}
	100% {
		box-shadow: 0 0 0 0 rgba(0, 255, 0, 0);
	}
}

ul.pills {

	list-style-type: none;
	margin: 0;
	padding: 0;
	display: flex;
	gap: calc(var(--gap)/4);
	justify-content: left;
	flex-wrap: wrap;

	@media (max-width: 1200px) {
		justify-content: center;
	}

	li {
		padding: 0.7rem 0.8rem;
		border-radius: 2rem;
		color: white;
		font-family: var(--font-GoogleSans);
		text-transform: uppercase;
		font-weight: 700;
		font-size: 0.9rem;

		background: var(--alt);

		transition: filter 0.7s ease-in-out;

		&:hover {
			filter: brightness(120%);
			cursor: default;
		}
	}
}

